# smi-data-platform

./: .env.example  .gitignore  COMMENT_UTILISER.md  DEPLOYMENT_GUIDE.md  LICENSE  Makefile  PROJECT_STATS.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  Yez  Yez.pub  docker-compose.yml  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  install.sh  pyproject.toml
airflow/dags/: smi_full_pipeline.py
dbt/: dbt_project.yml  profiles.yml
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: data_quality_checkpoint.yml
great_expectations/expectations/: .ge_store_backend_id  data_quality_suite.json
monitoring/alertmanager/: alertmanager.yml
monitoring/prometheus/: prometheus.yml
scripts/ddl/: 01_create_schemas.sql
src/extract/: excel_extractor.py
src/transform/: data_cleaner.py
tests/: conftest.py
tests/e2e/: test_full_workflow.py
tests/integration/: test_etl_pipeline.py
tests/unit/: test_data_cleaner.py  test_data_quality.py  test_excel_extractor.py
