[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smi-data-platform"
version = "1.0.0"
description = "Plateforme complète de data engineering pour l'analyse des données SMI au Burkina Faso"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Yézouma", email = "yezou@sandtechnologies.bf"},
]
keywords = [
    "data-engineering",
    "healthcare",
    "burkina-faso",
    "etl",
    "data-warehouse"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    # Core Data Processing
    "pandas>=2.1.4",
    "polars>=0.20.0",
    "pyarrow>=14.0.2",
    "numpy>=1.26.3",
    
    # Database & Storage
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "boto3>=1.34.20",  # AWS S3 / MinIO
    
    # Excel & File Processing
    "openpyxl>=3.1.2",
    "xlrd>=2.0.1",
    "xlsxwriter>=3.1.9",
    
    # ETL & Orchestration
    "apache-airflow>=2.8.1",
    "apache-airflow-providers-postgres>=5.10.0",
    "apache-airflow-providers-amazon>=8.17.0",
    
    # dbt
    "dbt-core>=1.7.4",
    "dbt-postgres>=1.7.4",
    
    # Data Quality
    "great-expectations>=0.18.8",
    "pandera>=0.18.0",
    
    # Monitoring & Logging
    "prometheus-client>=0.19.0",
    "sentry-sdk>=1.40.0",
    "python-json-logger>=2.0.7",
    
    # Configuration
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    
    # Utilities
    "click>=8.1.7",
    "tqdm>=4.66.1",
    "requests>=2.31.0",
    "tenacity>=8.2.3",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.23.3",
    "pytest-xdist>=3.5.0",
    "hypothesis>=6.96.1",
    
    # Code Quality
    "ruff>=0.1.14",
    "black>=23.12.1",
    "isort>=5.13.2",
    "mypy>=1.8.0",
    "pylint>=3.0.3",
    "bandit>=1.7.6",
    
    # Type Stubs
    "types-requests>=2.31.0.20240106",
    "types-python-dateutil>=2.8.19.14",
    "pandas-stubs>=2.1.4.231227",
    
    # Documentation
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=1.25.2",
    "myst-parser>=2.0.0",
    
    # Jupyter
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.10",
    "ipython>=8.19.0",
    "ipywidgets>=8.1.1",
    
    # Visualization
    "matplotlib>=3.8.2",
    "seaborn>=0.13.1",
    "plotly>=5.18.0",
    
    # Pre-commit hooks
    "pre-commit>=3.6.0",
]

analytics = [
    # Advanced Analytics
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.1",
    "scipy>=1.12.0",
    
    # Geospatial
    "geopandas>=0.14.2",
    "folium>=0.15.1",
    "shapely>=2.0.2",
]

[project.urls]
Homepage = "https://github.com/sandtech/smi-data-platform"
Documentation = "https://docs.smi-platform.bf"
Repository = "https://github.com/sandtech/smi-data-platform"
Issues = "https://github.com/sandtech/smi-data-platform/issues"

[project.scripts]
smi-pipeline = "src.cli:main"

[tool.setuptools]
packages = ["src", "src.extract", "src.transform", "src.load", "src.quality", "src.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "D",   # pydocstyle
]
ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"tests/*" = ["D100", "D103"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "polars",
    "pyarrow",
    "great_expectations",
    "airflow",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]
